finished landing page

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -5,6 +5,8 @@ $icon-font-path: "/bower_components/bootstrap-sass-official/vendor/assets/fonts/
 // endbower
 
 $color-theme: #407CBF;
+$color-themedark: #2D5786;
+$color-lightgrey: #E6E6E6;
 
 $padding-small: 8px;
 $padding-med: 16px;
@@ -27,7 +29,7 @@ h1 { font-size: 18px;}
         }
     }
     .botbar{
-        height: 168px;
+        height: 156px;
         .reliable {
             position: relative;
             float: left;
@@ -42,12 +44,79 @@ h1 { font-size: 18px;}
 .main 
 {
     @include grid-row;
+    margin: 0;
+    max-width: 100%;
     .sidebar {
         @include grid-column(2);
+        padding: 0;
+        .navimage {
+            img {
+                width: 100%;
+            }
+        }
+        .navbar{
+            background-color: $color-lightgrey;
+            ul 
+            {
+                list-style-type: none;
+                text-align: center;
+                margin: 0;
+                li
+                {
+                color: $color-themedark;
+            border-bottom: 1px solid white;
+                }
+            }
+        }
     }
 
     .body {
-        @include grid-column(10);
+        @include grid-column(8);
+        padding: $padding-med;
+        h1 {
+            font-weight: 700;
+            margin: 0;
+        }
+        p
+        {
+            color: $color-themedark;
+        }
+    }
+
+    .rightbar {
+        @include grid-column (2);
+        p {
+            margin: 0;
+        }
+        padding: $padding-small;
+        margin: 0;
+        text-align: center;
+        .aic {
+            width: 100%;
+            padding:$padding-large;}
+        .oaic {
+            width: 100%;
+        padding:$padding-large;}
+    }
+}
+
+.footer {
+    margin: 0;
+    .top {
+        height: 24px;
+        margin:0;
+        background-color: grey;
+        border-bottom: 2px solid white;
+    }
+    .bot {
+        background-color: $color-theme;
+        height: 96px;
+        .copyright {
+            color: white;
+            text-align: center;
+            padding: $padding-xsmall;
+            margin: 0;
+        }
     }
 }
 /* Responsive: Portrait tablets and up */
